--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <main>
       <img
-        src="/images/image-qr-code.png"
+        src="./images/image-qr-code.png"
         alt="qr code"
         width="288"
         height="288"
